# tbhdashboard

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  styles.css
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD
rust-sidecar/: Cargo.toml
rust-sidecar/src/: main.rs
scripts/: build-sidecar.sh  clean.sh  release.sh
sidecar/: addon.py  build.sh  main.py
src/: app.rs  invoke.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: tbhd-sidecar-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/nethelper/: Cargo.toml
src-tauri/nethelper/src/: main.rs
src-tauri/src/: assets.rs  capture.rs  catalog.rs  chests.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  nethelper.rs  observations.rs  proxy.rs  sidecar.rs  speedhack.rs  state.rs  updater.rs  utils.rs
src/components/: boss_drop.rs  chest_queue.rs  events.rs  extra_features.rs  farm_ranking.rs  force_drop.rs  mod.rs  requests.rs  reroll.rs  settings.rs
