[package]
name = "tbhd-sidecar"
version = "0.1.8"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
hudsucker = { version = "0.24.1", features = ["decoder", "rcgen-ca", "rustls-client"] }
http-body-util = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
