[package]
name = "tbhdashboard"
version = "1.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tbhdashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
dirs = "6.0.0"
hex = "0.4.3"
hudsucker = { version = "0.24.1", features = ["decoder", "rcgen-ca", "rustls-client"] }
http-body-util = "0.1.3"
regex = "1.12.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
sha2 = "0.10.9"
tauri-plugin-dialog = "2.7.1"
tokio = { version = "1.48.0", features = ["sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_UI_Shell",
] }
